--- a/HsvColorPickers/SwatchesPicker.xaml
+++ b/HsvColorPickers/SwatchesPicker.xaml
@@ -16,7 +16,8 @@
             <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
 
-        <canvas:CanvasControl x:Name="CanvasControl" Grid.Row="1"/>
+        <canvas:CanvasControl x:Name="CanvasControl" Grid.Row="1"
+                              FlowDirection="LeftToRight"/>
 
         <GridView x:Name="GridView">
             <GridView.Style>
