--- a/HsvColorPickers/WheelPicker.xaml
+++ b/HsvColorPickers/WheelPicker.xaml
@@ -10,6 +10,7 @@
     MinHeight="200"
     >
 
-    <canvas:CanvasControl x:Name="CanvasControl"/>
+    <canvas:CanvasControl x:Name="CanvasControl"
+                          FlowDirection="LeftToRight"/>
 
 </UserControl>
