--- a/HsvColorPickers/ColorPicker.xaml
+++ b/HsvColorPickers/ColorPicker.xaml
@@ -33,7 +33,7 @@
                 #
             </ContentControl>
             <local:HexPicker x:Name="HexPickerCore" Grid.Column="1" Height="24" BorderThickness="0" />
-            <local:EyedropperToolButton  x:Name="Eyedropper" Grid.Column="3" Margin="0" MinWidth="32" MaxWidth="32" Width="32" Height="32" Style="{x:Bind ButtonStyle, Mode=OneWay}">
+            <local:EyedropperToolButton  x:Name="Eyedropper" Grid.Column="3" Margin="0" Padding="2" MaxWidth="32" MinWidth="32" Width="32" Height="32" Style="{x:Bind ButtonStyle, Mode=OneWay}">
                 <FontIcon Glyph="&#xEF3C;" FontFamily="Segoe MDL2 Assets" />
             </local:EyedropperToolButton>
         </Grid>
